--- a/logIn.html
+++ b/logIn.html
@@ -10,6 +10,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <title>Hikers - Login</title>
+  <link rel="icon" href="image/logo.png" type="image/png" sizes="16x16">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/loginstyle.css">
