--- a/post-deatils.html
+++ b/post-deatils.html
@@ -11,7 +11,8 @@
         <meta name="robots" content="index, nofollow">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="language" content="English">
-        <title>Hikers</title>
+        <title>Hikers - Post Detials</title>
+        <link rel="icon" href="image/logo.png" type="image/png" sizes="16x16">
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <!-- <link href="css/animate.css" rel="stylesheet" type="text/css"> -->
