--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,8 @@
   <meta name="robots" content="index, nofollow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <title>Hikers - Register</title>
+  <title>Hikers - Signup</title>
+  <link rel="icon" href="image/logo.png" type="image/png" sizes="16x16">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/loginstyle.css">
