--- a/contact-us.html
+++ b/contact-us.html
@@ -40,22 +40,16 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="post-thread.html"> Post Thread </a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
-                            <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="category.html">Question Category</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="threads.html">Threads</a></li>
 
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                 aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="contact-us.html"> Contact Us</a></li>
+                                <li><a href="threads.html"> Threads </a></li>
                                 <li><a href="post-thread.html"> Post Thread </a></li>
-                                <li><a href="post-deatils.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
-                                <li><a href="user-details.html"> User Question </a></li>
-                                <li><a href="category.html"> Category </a></li>
+                                <li><a href="user-details.html"> User Details </a></li>
+                                <li><a href="contact-us.html"> Contact Us</a></li>
                             </ul>
                         </li>
                         <li><a href="contact-us.html"> Contact Us</a></li>
@@ -142,15 +136,15 @@
                     <div class="tags-part2398">
                         <h4>Tags</h4>
                         <ul>
-                            <li><a href="#">analytics</a></li>
-                            <li><a href="#">Computer</a></li>
-                            <li><a href="#">Developer</a></li>
-                            <li><a href="#">Google</a></li>
-                            <li><a href="#">Interview</a></li>
-                            <li><a href="#">Programmer</a></li>
-                            <li><a href="#">Salary</a></li>
-                            <li><a href="#">University</a></li>
-                            <li><a href="#">Employee</a></li>
+                            <li><a href="#">hiking</a></li>
+                            <li><a href="#">adventure</a></li>
+                            <li><a href="#">mountains</a></li>
+                            <li><a href="#">travel</a></li>
+                            <li><a href="#">trekking</a></li>
+                            <li><a href="#">explore</a></li>
+                            <li><a href="#">camping</a></li>
+                            <li><a href="#">outdoors</a></li>
+                            <li><a href="#">hike</a></li>
                         </ul>
                     </div>
                     <!--          End tags part-->
@@ -158,23 +152,27 @@
                     <div class="recent-post3290">
                         <h4>Recent Post</h4>
                         <div class="post-details021"> <a href="#">
-                                <h5>How much do web developers</h5>
+                                <h5>Rock Lakes - Serene Lake Hike 6/1-6/2 2021</h5>
                             </a>
-                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small
-                                style="color: #848991">July 16, 2017</small>
+                            <p>I heard the Roaring River Wilderness had recently been opened up by the Forest Service
+                                after the fires last summer. With a few open days on our schedule, my wife and I decided
+                                to go check it out...</p> <small style="color: #848991">July 16, 2017</small>
                         </div>
                         <hr>
                         <div class="post-details021"> <a href="#">
-                                <h5>How much do web developers</h5>
+                                <h5>Trinity Alps 5/27/2021</h5>
                             </a>
-                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small
-                                style="color: #848991">July 16, 2017</small>
+                            <p>Perfect time to go there. The snow is pretty much all melted off any trail you'd want to
+                                walk on. It got up to 85F or so - pretty warm...</p> <small style="color: #848991">July
+                                16, 2017</small>
                         </div>
                         <hr>
                         <div class="post-details021"> <a href="#">
-                                <h5>How much do web developers</h5>
+                                <h5>Trout Creek to View Point – 2021-06-03</h5>
                             </a>
-                            <p>I am thinking of pursuing web developing as a career & was ...</p> <small
+                            <p>This is an out and back hike on the PCT Southbound. The hike on the way in is a moderate
+                                elevation gain.
+                                Not a lot of flowers or other views on the trail...</p> <small
                                 style="color: #848991">July 16, 2017</small>
                         </div>
                     </div>
@@ -205,49 +203,47 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="info-part-one320">
-                        <h4>Where We Are ?</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio, sit
-                            amet suscipit risus ultrices eu.</p>
+                        <h4>Where is Hikers ?</h4>
+                        <p>Hikers is an application that resembles a portal for mountaineers to provide information to
+                            each other about things related to hiking. In addition to the community portal, the app
+                            offers a hiking route planner and a GPS-based Find me feature if you get lost or need help.
+                        </p>
                         <h4>Address :</h4>
-                        <p>Ask Me Network, 33 Street, syada
-                            <br> Zeinab, Cairo, Egypt.</p>
+                        <p>Jakarta, Indonesia.</p>
                         <h4>Support :</h4>
-                        <p>Support Telephone No : (+2)01111011110</p>
+                        <p>Support Telephone No : (0251)9459110</p>
                         <p>Support Email Account : </p>
-                        <p>info@example.com</p>
+                        <p>support.center@hikers.com</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info-part-two320">
                         <h4>Quick Links</h4>
-                        <a href="#">
+                        <a href="/">
                             <p>-Home</p>
                         </a>
-                        <a href="#">
-                            <p>-Ask Question</p>
+                        <a href="post-thread.html">
+                            <p>-Post Thread</p>
                         </a>
-                        <a href="#">
-                            <p>-Questions</p>
+                        <a href="post-deatils.html">
+                            <p>-Post Details</p>
                         </a>
-                        <a href="#">
-                            <p>-Users</p>
+                        <a href="user-details.html">
+                            <p>-User Details</p>
                         </a>
-                        <a href="#">
-                            <p>-Edit Profile</p>
-                        </a>
-                        <a href="#">
-                            <p>-Page</p>
-                        </a>
-                        <a href="#">
+                        <a href="contact-us.html">
                             <p>-Contact Us</p>
                         </a>
-                        <a href="#" class="last-child12892">
-                            <p>-Buy now</p>
-                        </a>
+
                     </div>
                 </div>
             </div>
+            <div class="text-center" style="margin-top: 8px;padding-bottom: 0px;margin-bottom: 0px;">
+                <hr>
+                <p style="color: white;padding-top: 10px;padding-bottom: 0px;">Copyright 2021 Hikers.</p>
+            </div>
         </div>
+
     </section>
     <section class="footer-social">
         <div class="container">
