--- a/view-map.html
+++ b/view-map.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Hikers">
     <meta name="description"
-          content="Hikers is an online portal forum for hikers and mountain adventurers with the addition of saving your hiking routes via Google Maps and share it with everyone">
+        content="Hikers is an online portal forum for hikers and mountain adventurers with the addition of saving your hiking routes via Google Maps and share it with everyone">
     <meta name="keywords" content="hiking, community, forum, hiking-route, hiking-planner">
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <title>Hikers</title>
+    <title>Hikers - Routes</title>
     <link rel="icon" href="image/logo.png" type="image/png" sizes="16x16">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -22,149 +22,157 @@
 
 <body>
 
-<!-- ==========header mega navbar=======-->
-<div class="top-menu-bottom932">
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+    <!-- ==========header mega navbar=======-->
+    <div class="top-menu-bottom932">
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle
                             navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
-                        class="icon-bar"></span> </button>
-                <a class="navbar-brand" href="index.html"><img src="image/logo.png" width="101" height="57"
-                                                               alt="Logo"></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav"> </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="post-thread.html"> Post Thread </a></li>
-                    <li><a href="threads.html">Threads</a></li>
+                            class="icon-bar"></span> </button>
+                    <a class="navbar-brand" href="index.html"><img src="image/logo.png" width="101" height="57"
+                            alt="Logo"></a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav"> </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="post-thread.html"> Post Thread </a></li>
+                        <li><a href="threads.html">Threads</a></li>
 
-                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                             aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="threads.html"> Threads </a></li>
-                            <li><a href="post-thread.html"> Post Thread </a></li>
-                            <li><a href="user.html">All User</a></li>
-                            <li><a href="user-details.html"> User Details </a></li>
-                            <li><a href="contact-us.html"> Contact Us</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact-us.html"> Contact Us</a></li>
-                </ul>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
+                            <ul class="dropdown-menu animated zoomIn">
+                                <li><a href="threads.html"> Threads </a></li>
+                                <li><a href="post-thread.html"> Post Thread </a></li>
+                                <li><a href="user.html">All User</a></li>
+                                <li><a href="user-details.html"> User Details </a></li>
+                                <li><a href="contact-us.html"> Contact Us</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact-us.html"> Contact Us</a></li>
+                        <li> <a href="#" class="profile-icon" data-toggle="dropdown" role="button" aria-haspopup="true"
+                                aria-expanded="false">
+                                <img src="image/images.png" alt="image">
+                                <span class="caret"></span></a>
+                            <ul class="dropdown-menu animated zoomIn">
+                                <li><a href="user-details.html"> Profile </a></li>
+                                <li><a href="logIn.html"> Log Out </a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
             </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-</div>
+            <!-- /.container-fluid -->
+        </nav>
+    </div>
 
-<!-- ======content section/body=====-->
-<section class="main-content920">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div id="map">
-                    <iframe
-                            width="1128"
-                            height="500"
-                            frameborder="0" style="border:0"
-                            src="https://www.google.com/maps/embed/v1/directions?origin=40.7127837,-74.0059413&destination=42.3600825,-71.05888&key=AIzaSyAIyA9kxkGU_881z7dYKwQiuahmPckvlfQ" allowfullscreen>
-                    </iframe>
+    <!-- ======content section/body=====-->
+    <section class="main-content920">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="map">
+                        <iframe width="1128" height="500" frameborder="0" style="border:0"
+                            src="https://www.google.com/maps/embed/v1/directions?origin=40.7127837,-74.0059413&destination=42.3600825,-71.05888&key=AIzaSyAIyA9kxkGU_881z7dYKwQiuahmPckvlfQ"
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<!--    footer -->
-<div class="footer-search">
-    <div class="container">
-        <div class="row">
-            <div id="custom-search-input">
-                <div class="input-group col-md-12"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                    <input type="text" class="  search-query form-control user-control30"
-                           placeholder="Search here...." /> <span class="input-group-btn">
+    </section>
+    <!--    footer -->
+    <div class="footer-search">
+        <div class="container">
+            <div class="row">
+                <div id="custom-search-input">
+                    <div class="input-group col-md-12"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                        <input type="text" class="  search-query form-control user-control30"
+                            placeholder="Search here...." /> <span class="input-group-btn">
                             <button class="btn btn-danger" type="button">
                                 <span class=" glyphicon glyphicon-search"></span> </button>
                         </span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<section class="footer-part">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="info-part-one320">
-                    <h4>Where is Hikers ?</h4>
-                    <p>Hikers is an application that resembles a portal for mountaineers to provide information to
-                        each other about things related to hiking. In addition to the community portal, the app
-                        offers a hiking route planner and a GPS-based Find me feature if you get lost or need help.
-                    </p>
-                    <h4>Address :</h4>
-                    <p>Jakarta, Indonesia.</p>
-                    <h4>Support :</h4>
-                    <p>Support Telephone No : (0251)9459110</p>
-                    <p>Support Email Account : </p>
-                    <p>support.center@hikers.com</p>
+    <section class="footer-part">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="info-part-one320">
+                        <h4>What is Hikers ?</h4>
+                        <p>Hikers is an web application that resembles a portal for mountaineers to provide information
+                            to
+                            each other about things related to hiking. In addition to the community portal, the app
+                            offers a hiking route planner.
+                        </p>
+                        <h4>Address :</h4>
+                        <p>Jakarta, Indonesia.</p>
+                        <h4>Support :</h4>
+                        <p>Support Telephone No : (0251)9459110</p>
+                        <p>Support Email Account : </p>
+                        <p>support.center@hikers.com</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="info-part-two320">
-                    <h4>Quick Links</h4>
-                    <a href="/">
-                        <p>-Home</p>
-                    </a>
-                    <a href="post-thread.html">
-                        <p>-Post Thread</p>
-                    </a>
-                    <a href="post-deatils.html">
-                        <p>-Post Details</p>
-                    </a>
-                    <a href="user-details.html">
-                        <p>-User Details</p>
-                    </a>
-                    <a href="contact-us.html">
-                        <p>-Contact Us</p>
-                    </a>
+                <div class="col-md-6">
+                    <div class="info-part-two320">
+                        <h4>Quick Links</h4>
+                        <a href="/">
+                            <p>-Home</p>
+                        </a>
+                        <a href="post-thread.html">
+                            <p>-Post Thread</p>
+                        </a>
+                        <a href="post-deatils.html">
+                            <p>-Post Details</p>
+                        </a>
+                        <a href="user-details.html">
+                            <p>-User Details</p>
+                        </a>
+                        <a href="contact-us.html">
+                            <p>-Contact Us</p>
+                        </a>
 
+                    </div>
                 </div>
             </div>
+            <div class="text-center" style="margin-top: 8px;padding-bottom: 0px;margin-bottom: 0px;">
+                <hr>
+                <p style="color: white;padding-top: 10px;padding-bottom: 0px;">Copyright 2021 Hikers.</p>
+            </div>
         </div>
-        <div class="text-center" style="margin-top: 8px;padding-bottom: 0px;margin-bottom: 0px;">
-            <hr>
-            <p style="color: white;padding-top: 10px;padding-bottom: 0px;">Copyright 2021 Hikers.</p>
-        </div>
-    </div>
 
-</section>
-<section class="footer-social">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <p>Copyright 2021 Hikers.</p>
-            </div>
-            <div class="col-md-6">
-                <div class="social-right2389"> <a href="#"><i class="fa fa-twitter-square"
-                                                              aria-hidden="true"></i></a> <a href="#"><i class="fa fa-facebook"
-                                                                                                         aria-hidden="true"></i></a> <a href="#"><i class="fa fa-google-plus"
-                                                                                                                                                    aria-hidden="true"></i></a> <a href="#"><i class="fa fa-youtube"
-                                                                                                                                                                                               aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype"
-                                                                                                                                                                                                                                          aria-hidden="true"></i></a> <a href="#"><i class="fa fa-linkedin"
-                                                                                                                                                                                                                                                                                     aria-hidden="true"></i></a> <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a>
+    </section>
+    <section class="footer-social">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>Copyright 2021 Hikers.</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="social-right2389"> <a href="#"><i class="fa fa-twitter-square"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-facebook"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-google-plus"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-youtube"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-linkedin"
+                                aria-hidden="true"></i></a> <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/npm.js"></script>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/npm.js"></script>
 </body>
 
 </html>
